--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,10 @@
 <h1>Hello World</h1>
 
 <div id="camera"></div>
+
+<button id="capture">Capture</button>
+
+
+<script type="text/javascript">
+  init();
+</script>
