users files created and working in progress

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
   </head>
 
   <body>
+    <%= render "includes/navigation" %>
+    <!-- <div class="ui text container" id="flash-notices"> -->
+      <%= render "includes/flash_notices" %>
+    <!-- </div> -->
     <%= yield %>
   </body>
 </html>
