--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,4 +19,19 @@
 #camera {
   width: 250px;
   height: 250px;
+  margin: auto !important;
+}
+
+.ui.large.form {
+  width: 100%;
+}
+
+.field {
+  width: 50%;
+  margin-left: 25% !important;
+}
+
+.ui.button {
+  display: block;
+  margin: 10px auto !important;
 }
