--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,14 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <%= cloudinary_js_config %>
   </head>
 
   <body>
+    <%= render "includes/navigation" %>
+    <!-- <div class="ui text container" id="flash-notices"> -->
+      <%= render "includes/flash_notices" %>
+    <!-- </div> -->
     <%= yield %>
   </body>
 </html>
