--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,11 +12,11 @@
       <%= el.text_field :email, placeholder: "Email address" %>
     </div>
     <div id="camera"></div>
-      <%= el.submit "Sign Up", class: "ui large button" %>
+      <!-- <%= el.text_field :image_id, placeholder: "Image" %> -->
+
+  <%= el.cl_image_upload :user_image, class: "hideme" %>
+
+      <%= el.button "Sign Up", class: "ui large button", id: "capture", type: "button" %>
     <% end %>
   </div>
 </div>
-
-<script type="text/javascript">
-  init();
-</script>
