Sign up and Kairos gallery enrolment features completed

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,9 +1,10 @@
 <h1>Hello World</h1>
 
-<div id="camera"></div>
+<!-- <div id="camera"></div>
 
-<button class="ui button" id="capture">Capture</button>
+<button class="ui button" id="capture">Capture</button> -->
 
-<script type="text/javascript">
+
+<!-- <script type="text/javascript">
   init();
-</script>
+</script> -->
