--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -1,7 +1,7 @@
 <body>
 	<main class="main-container">
 		<section>
-			<div class="form">
+			<div class="searchForm">
 				<form action="">
 					<input type="search" value="">
 					<input type="submit" value="Create">
