--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -17,7 +17,7 @@ iframe {
 	justify-content: center;
 }
 
-.main-container form,
+.main-container searchForm,
 section,
 .playlist {
 	display: flex;
@@ -25,19 +25,19 @@ section,
 	justify-content: center;
 }
 
-.form,
+.searchForm,
 .playlist {
 	width: 50%;
 	padding: 0 50px;
 }
 
-.form img {
+.searchForm img {
 	width: 100px;
 	display: block;
 	margin: 0 auto;
 }
 
-.form p {
+.searchForm p {
 	color: grey;
 	font-size: 12px;
 }
