--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,13 @@
 
   <body>
     <%= render "includes/navigation" %>
-    <!-- <div class="ui text container" id="flash-notices"> -->
-      <%= render "includes/flash_notices" %>
-    <!-- </div> -->
-    <%= yield %>
+    <div class="ui main text container">
+
+      <div class="ui text container" id="flash-notices">
+        <%= render "includes/flash_notices" %>
+      </div>
+      <%= yield %>
+      
+    </div>
   </body>
 </html>
