--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,7 +2,7 @@
 
 <div id="camera"></div>
 
-<button id="capture">Capture</button>
+<button class="ui button" id="capture">Capture</button>
 
 <script type="text/javascript">
   init();
