Image verification at sign in page completed, to be tested

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -13,7 +13,7 @@
     </div>
     <div id="camera"></div>
 
-      <%= el.button "Sign Up", class: "ui large button", id: "capture", type: "button" %>
+      <%= el.button "Sign Up", class: "ui large button", id: "enroll", type: "button" %>
     <% end %>
   </div>
 </div>
