Fixed some issues

--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -5,3 +5,8 @@
 <button id="capture">Capture</button>
 
 <%= cl_image_upload_tag(:image_id, :resource_type => :image, :html => {:class => "hidden_file", :id => 'image_upload' }) %>
+
+
+<script type="text/javascript">
+  captureImage()
+</script>
