--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -13,14 +13,12 @@
     </div>
     <div id="camera"></div>
 
-
-  <%= el.cl_image_upload :user_image, class: "hideme" %>
-
-
-      <%= el.button "Sign Up", class: "ui large button", id: "capture", type: "button" %>
-
       <%= el.button "Sign Up", class: "ui large button", id: "enroll", type: "button" %>
 
     <% end %>
   </div>
 </div>
+
+<script type="text/javascript">
+  signup()
+</script>
