move cloudinary code to own file

--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -4,4 +4,4 @@
 
 <button id="capture">Capture</button>
 
-<%= cl_image_upload_tag(:image_id, :resource_type => :image, :html => {:class => "hidden_file", :id => 'image_upload' }) %>
+<%= cl_image_upload_tag(:image_id, :resource_type => :image, :html => {:class => "hidden_file", :id => "image_upload" }) %>
