--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -1,13 +1,17 @@
-<h1>Images New</h1>
+<div class="ui main text container">
 
-<div id="camera"></div>
+  <h1>Images New</h1>
 
-<button id="capture">Capture</button>
+  <div id="camera"></div>
+
+  <button id="capture">Capture</button>
 
 
-<%= cl_image_upload_tag(:image_id, :resource_type => :image, :html => {:class => "hidden_file", :id => 'image_upload' }) %>
+  <%= cl_image_upload_tag(:image_id, :resource_type => :image, :html => {:class => "hidden_file", :id => 'image_upload' }) %>
 
 
-<script type="text/javascript">
-  captureImage()
-</script>
+  <script type="text/javascript">
+    captureImage()
+  </script>
+  
+</div>
