resolved spotify js issues

--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -4,7 +4,7 @@
 			<div class="searchForm">
 				<form action="">
 					<input type="search" value="">
-					<input type="submit" value="Create">
+					<input type="button" value="Create" id="create">
 				</form>
 
 			</div>
