--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -13,8 +13,8 @@ iframe {
 	min-height: 100vh;
 	background: linear-gradient(75deg, rgba(119, 205, 155, 0.82), rgba(69, 24, 115, 0.53));
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
+	/*flex-direction: column;*/
+	/*justify-content: center;*/
 }
 
 .main-container searchForm,
@@ -25,7 +25,7 @@ section,
 	justify-content: center;
 }
 
-.searchForm,
+/*.searchForm,
 .playlist {
 	width: 50%;
 	padding: 0 50px;
@@ -40,9 +40,9 @@ section,
 .searchForm p {
 	color: grey;
 	font-size: 12px;
-}
+}*/
 
-.main-container input {
+/*.main-container input {
 	background: rgba(255,255,255,0.2);
 	height: 50px;
 	border: 1px solid white;
@@ -66,7 +66,7 @@ section,
 
 .main-container input[type=submit]:hover {
 	box-shadow: inset 1px 1px 1px rgba(0,0,0,0.2);
-}
+}*/
 
 .loader {
 	display: none;
