added some background stylez

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,9 @@
  *= require_self
  *= require main
  */
-
+body{
+  background: linear-gradient(75deg, rgba(119, 205, 155, 0.82), rgba(69, 24, 115, 0.53));
+}
 
 #camera {
   width: 400px;
