--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Project2</title>
+    <title>emoFace</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <%= csrf_meta_tags %>
